--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
 	    <artifactId>log4j-core</artifactId>
 	    <version>2.11.1</version>
   	</dependency>
+  	
+  	<dependency>
+	    <groupId>io.github.mzmine</groupId>
+	    <artifactId>mzmine2</artifactId>
+	    <version>2.38</version>
+  	</dependency>
 	
   </dependencies>
 </project>
